# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  production.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-223ba3593d0fee231a65161d142240a272ec3cd877437ccff33c0011cf56acae.json  query-5ccc4363342d6aa04d399159b6842bc0724f144046be5929f3b3e6c6f41e49b0.json  query-5e2da7b5e8c63a7083cb7eafc6b18202fe31ab186ff746cf34a6f457294be242.json  query-f18986de17a1d1bf1719d66f7ea0481656172c72eaa5b3eb3ac0855ef1fb096d.json
backend/: Cargo.toml
backend/configuration/: local.yaml  staging.yaml
backend/migrations/: 20251002190936_seed_user.sql  20251007173414_create_newsletter_issues_table.sql
backend/src/: email_client.rs  issue_delivery_worker.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
backend/src/authentication/: password.rs
backend/src/domain/: subscriber_name.rs
backend/src/idempotency/: persistence.rs
backend/src/routes/: mod.rs  subscriptions.rs
backend/tests/api/: admin_dashboard.rs  (+6 more)
configuration/: base.yaml  local.yaml  production.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-dx/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json
frontend-dx/assets/: tailwind.css
frontend-dx/src/: api.rs  main.rs
frontend/src/: AdminDashboard.vue  App.vue  AppBreadcrumb.vue  AppButton.vue  AppForm.vue  AppMessages.vue  ChangePasswordForm.vue  FormTextAreaField.vue  FormTextField.vue  LoginForm.vue  SendNewsletterForm.vue  SubmitButton.vue  SubscribeForm.vue  UserMenu.vue  api.ts  main.css  state.ts
scripts/: env_staging.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  frontend.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+18 files in other folders)
