[package]
name = "frontend"
version = "0.1.0"
authors = ["Andy Brauninger <43097655+abrauninger@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.1", features = ["router"] }
dioxus-logger = "0.6.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
