[package]
name = "frontend"
version = "0.1.0"
authors = ["Andy Brauninger <43097655+abrauninger@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.0-rc.1", features = ["router"] }
dioxus-free-icons = { git = "https://github.com/abrauninger/dioxus-free-icons", features = ["hero-icons-solid"] }
dioxus-logger = "0.6.2"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", features = ["web"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["js", "v4"] }
web-sys = "0.3.81"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
